# FinalProjectCpp

./: .gitignore  README.md
Finder/: CMakeLists.txt  POSTexample.cpp  finder.cpp  finder.h  main.cpp
Finder/enc_temp_folder/458817d55b3071bd577695c88c32ce2d/: main.cpp
Spider/: CMakeLists.txt  Diplom_CPP.sln  HTTPclient.cpp  HTTPclient.h  ParcerHTML.cpp  ParcerHTML.h  configuration.ini  database.cpp  database.h  indexator.cpp  indexator.h  main.cpp
